add_library(robotraconteur_test_lfsr SHARED src/robotraconteur_test_lfsr.c)
target_include_directories(robotraconteur_test_lfsr PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

if(WIN32)
	target_compile_definitions(robotraconteur_test_lfsr PRIVATE ROBOTRACONTEUR_TEST_LFSR_EXPORTS INTERFACE ROBOTRACONTEUR_TEST_LFSR_IMPORTS)
endif()